--- a/main.html
+++ b/main.html
@@ -26,7 +26,7 @@
         </div>
         <main class="mdl-layout__content">
             <div class="page-content" style="padding-top: 60px;" align="center">
-                <h5>Firebase Realtime Database และ Storage</h5>
+                <h5>Firebase Realtime Database Storage</h5>
                 <table id="ex-table" class="mdl-data-table mdl-js-data-table mdl-shadow--2dp" style="width:40%;" >
                     <thead>
                         <tr>
@@ -51,12 +51,12 @@
     <script>
         var txt_title, txt_content, txt_img = '';
         var config = {
-            apiKey: "AIzaSyAMtWVgHUc7AmNBmz0KCK2Hwbo8Ph52h-0",
-            authDomain: "hosting-firebase-tos.firebaseapp.com",
-            databaseURL: "https://hosting-firebase-tos.firebaseio.com",
-            projectId: "hosting-firebase-tos",
-            storageBucket: "hosting-firebase-tos.appspot.com",
-            messagingSenderId: "497587464019"
+            apiKey: "AIzaSyBvGNl7SJolibbLp1hkY2dZWLcyt2SAAuo",
+            authDomain: "vuetifyadmin.firebaseapp.com",
+            databaseURL: "https://vuetifyadmin-default-rtdb.firebaseio.com",
+            projectId: "vuetifyadmin",
+            storageBucket: "vuetifyadmin.appspot.com",
+            messagingSenderId: "613782349047"
         };
         firebase.initializeApp(config);
         var database = firebase.database();
