--- a/delete.html
+++ b/delete.html
@@ -36,12 +36,12 @@
     <script>
 
         var config = {
-            apiKey: "AIzaSyAMtWVgHUc7AmNBmz0KCK2Hwbo8Ph52h-0",
-            authDomain: "hosting-firebase-tos.firebaseapp.com",
-            databaseURL: "https://hosting-firebase-tos.firebaseio.com",
-            projectId: "hosting-firebase-tos",
-            storageBucket: "hosting-firebase-tos.appspot.com",
-            messagingSenderId: "497587464019"
+               apiKey: "AIzaSyBvGNl7SJolibbLp1hkY2dZWLcyt2SAAuo",
+            authDomain: "vuetifyadmin.firebaseapp.com",
+            databaseURL: "https://vuetifyadmin-default-rtdb.firebaseio.com",
+            projectId: "vuetifyadmin",
+            storageBucket: "vuetifyadmin.appspot.com",
+            messagingSenderId: "613782349047"
         };
 
         firebase.initializeApp(config);
